--- a/ElReg/elreg_app/templates/subdivision.html
+++ b/ElReg/elreg_app/templates/subdivision.html
@@ -11,14 +11,14 @@
 </blockquote>
 <div class="well">
 <div class="row-fluid">
-<div class="span4">
+<div class="span3">
     <ul class="firstTable nav nav-pills nav-stacked">
         {% for subdivision in subdivision_list %}
-            <li><a id="{{ subdivision.id }}" href="javascript:;" class="spec">{{ subdivision.name }} {% if subdivision.address %}({{ subdivision.address }}){% endif %}</a></li>
+            <li><a id="{{ subdivision.id }}" href="javascript:;" class="spec">{{ subdivision.name }}{% if subdivision.address %}<br>({{ subdivision.address }}){% endif %}</a></li>
         {% endfor %}
     </ul>
 </div>
-<div class="span4">
+<div class="span3">
     <ul class="secondTable nav nav-pills nav-stacked"></ul>
 </div>
 <div class="span4">
