--- a/blueprints/site/templates/site/__documents_select.html
+++ b/blueprints/site/templates/site/__documents_select.html
@@ -1,64 +1,101 @@
-<div class="control-group">
-    <label class="control-label" for="doc_type_selector">Тип документа<span class="text-error">*</span></label>
-    <div class="controls">
-        <select name="document_type" id="doc_type_selector" class="span3">
-            <option value="">- укажите тип документа -</option>
-            <option value="client_id"{% if document_type == 'client_id' %} selected{% endif %}>Электронная амбулаторная карта</option>
-            <option value="doc_type_7"{% if document_type == 'doc_type_7' %} selected{% endif %}>Военный билет</option>
-            <option value="policy_type_3"{% if document_type == 'policy_type_3' %} selected{% endif %}>Полис ДМС</option>
-            <option value="policy_type_2"{% if document_type == 'policy_type_2' %} selected{% endif %}>Полис ОМС (старого образца)</option>
-            <option value="policy_type_4"{% if document_type == 'policy_type_4' %} selected{% endif %}>Полис ОМС (нового образца)</option>
-            <option value="doc_type_4"{% if document_type == 'doc_type_4' %} selected{% endif %}>Удостоверение личности офицера</option>
-        </select>
+<div class="control-group" style="position: relative;">
+        {{ form.document_type.label(class="control-label") }}
+        <div class="controls">
+            {{ form.document_type( id="doc_type_selector", class="span3", default=session.get('document_type')) }}
+        </div>
+    <div id="doc_example" class="hide">
+        <a href="javascript:void(0);" id="show_big_doc"><img src="" class="img-polaroid"></a>
+    </div>
+<!-- Modal -->
+    <div id="doc_example_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-body">
+            <img src="">
+        </div>
     </div>
 </div>
 
 <div class="{% if doc_meta_type != 'oms_dms' %}hidden{% endif %} doc_div policy_type_2 policy_type_3">
     <div class="control-group">
-        <label class="control-label" for="series">Серия полиса</label>
+        {{ form.series.label(class="control-label") }}
         <div class="controls">
-            <input type="text" name="series" id="series" value="{% if doc_meta_type == 'oms_dms' %}{{ series|default_if_none:"" }}{% endif %}" {% if doc_meta_type != 'oms_dms' %}disabled{% endif %} maxlength="10" size="2" autocomplete="on" placeholder="" class="span1" />
+            {% if doc_meta_type == 'oms_dms' %}
+                {% set series=session.get('series') %}
+                {% set disabled='' %}
+            {% else %}
+                {% set disabled='disabled' %}
+            {% endif %}
+            {{ form.series(class="span1", default=series, disabled=disabled, maxlength="10", size="2") }}
         </div>
     </div>
 
     <div class="control-group">
-        <label class="control-label" for="number">Номер полиса<span class="text-error">*</span></label>
+        {{ form.number.label(class="control-label") }}
         <div class="controls">
-            <input type="text" class="span3" name="number" id="number" value="{% if doc_meta_type == 'oms_dms' %}{{ number|default_if_none:"" }}{% endif %}" {% if doc_meta_type != 'oms_dms' %}disabled{% endif %} maxlength="16" size="20" autocomplete="on" placeholder="1234567890123456" />
+            {% if doc_meta_type == 'oms_dms' %}
+                {% set number=session.get('number') %}
+                {% set disabled='' %}
+            {% else %}
+                {% set disabled='disabled' %}
+            {% endif %}
+            {{ form.number(class="span3", default=number, disabled=disabled, placeholder="1234567890123456") }}
         </div>
     </div>
 </div>
 
 <div class="{% if doc_meta_type != 'new_oms' %}hidden{% endif %} doc_div policy_type_4">
     <div class="control-group">
-        <label class="control-label" for="policy_number">Номер полиса<span class="text-error">*</span></label>
+        {{ form.policy_number.label(class="control-label") }}
         <div class="controls">
-            <input type="text" class="span3" name="number" id="policy_number" value="{% if doc_meta_type == 'new_oms' %}{{ number|default_if_none:"" }}{% endif %}" {% if doc_meta_type != 'new_oms' %}disabled{% endif %} maxlength="16" size="20" autocomplete="on" placeholder="1234567890123456" />
+            {% if doc_meta_type == 'new_oms' %}
+                {% set number=session.get('number') %}
+                {% set disabled='' %}
+            {% else %}
+                {% set disabled='disabled' %}
+            {% endif %}
+            {{ form.policy_number(class="span3", default=number, disabled=disabled, placeholder="1234567890123456") }}
         </div>
     </div>
 </div>
 
 <div class="{% if doc_meta_type != 'amb' %}hidden{% endif %} doc_div client_id">
     <div class="control-group">
-        <label class="control-label" for="client_id">Электронная амбулаторная карта<span class="text-error">*</span></label>
+        {{ form.client_id.label(class="control-label") }}
         <div class="controls">
-            <input type="text" class="span3" name="number" id="client_id" value="{% if doc_meta_type == 'amb' %}{{ number|default_if_none:"" }}{% endif %}" {% if doc_meta_type != 'amb' %}disabled{% endif %} maxlength="16" size="20" autocomplete="on" placeholder="1234567890123456" />
+            {% if doc_meta_type == 'amb' %}
+                {% set number=session.get('number') %}
+                {% set disabled='' %}
+            {% else %}
+                {% set disabled='disabled' %}
+            {% endif %}
+            {{ form.client_id(class="span3", default=number, disabled=disabled, placeholder="1234567890123456") }}
         </div>
     </div>
 </div>
 
 <div class="{% if doc_meta_type != 'doc' %}hidden{% endif %} doc_div doc_type_4 doc_type_7">
     <div class="control-group">
-        <label class="control-label" for="doc_series">Серия документа<span class="text-error">*</span></label>
+        {{ form.doc_series.label(class="control-label") }}
         <div class="controls">
-            <input type="text" name="series" id="doc_series" value="{% if doc_meta_type == 'doc' %}{{ series|default_if_none:"" }}{% endif %}" {% if doc_meta_type != 'doc' %}disabled{% endif %} maxlength="10" size="2" autocomplete="on" placeholder="" class="span1" />
+            {% if doc_meta_type == 'doc' %}
+                {% set series=session.get('series') %}
+                {% set disabled='' %}
+            {% else %}
+                {% set disabled='disabled' %}
+            {% endif %}
+            {{ form.doc_series(class="span1", default=series, disabled=disabled, maxlength="10", size="2") }}
         </div>
     </div>
 
     <div class="control-group">
-        <label class="control-label" for="doc_number">Номер документа<span class="text-error">*</span></label>
+        {{ form.doc_number.label(class="control-label") }}
         <div class="controls">
-            <input type="text" class="span3" name="number" id="doc_number" value="{% if doc_meta_type == 'doc' %}{{ number|default_if_none:"" }}{% endif %}" {% if doc_meta_type != 'doc' %}disabled{% endif %} maxlength="16" size="20" autocomplete="on" placeholder="1234567890123456" />
+            {% if doc_meta_type == 'doc' %}
+                {% set number=session.get('number') %}
+                {% set disabled='' %}
+            {% else %}
+                {% set disabled='disabled' %}
+            {% endif %}
+            {{ form.doc_number(class="span3", default=number, disabled=disabled, placeholder="1234567890123456") }}
         </div>
     </div>
 </div>
