--- a/blueprints/site/templates/site/_top.html
+++ b/blueprints/site/templates/site/_top.html
@@ -14,7 +14,7 @@
             </li>
             <li class="divider-vertical"></li>
             <li {% if session.get('step') == 3 %}class="active"{% endif %}>
-                {% if session.get('step') > 3 %}<a href="{{ url_for('.division', okato=session.get('lpu_id')) }}">{% else %}<a>{% endif %}<span class="label{% if session.get('step') >= 3 %} label-info{% endif %}">3</span> <big>Подразделение/Специализация/Врач</big></a>
+                {% if session.get('step') > 3 %}<a href="{{ url_for('.division', lpu_id=session.get('lpu_id')) }}">{% else %}<a>{% endif %}<span class="label{% if session.get('step') >= 3 %} label-info{% endif %}">3</span> <big>Подразделение/Специализация/Врач</big></a>
             </li>
             <li class="divider-vertical"></li>
             <li {% if session.get('step') == 4 %}class="active"{% endif %}>
