--- a/ElReg/elreg_app/templates/patient.html
+++ b/ElReg/elreg_app/templates/patient.html
@@ -127,7 +127,7 @@
     </div>
 </form>
 </div>
-<a href="{% url time %}" class="btn btn-primary btn-large">Вернуться</a>
+<a href="{% url time %}" class="btn btn-primary btn-large">К расписанию</a>
 <!-- Modal -->
 <div id="not_fnd_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-header">
