--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -13,12 +13,13 @@
 		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-1.8.2.min.js"></script>
 {#		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-ui-1.9.1.custom.min.js"></script>#}
         <script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery.placeholder.min.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}/static/js/scripts.js?2"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}/static/js/scripts.js?3"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}/static/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}/static/js/ie6.min.js"></script>
         <script type="text/javascript">jQuery('input[placeholder]').placeholder();</script>
         <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/jquery-ui/blitzer/jquery-ui-1.9.1.custom.min.css" />
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/bootstrap/css/bootstrap.min.css" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/bootstrap/css/bootstrap.min.css?1" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/bootstrap/css/bootstrap-responsive.min.css" />
         <!--[if IE 6]>
             <link href="{{ STATIC_URL }}/static/css/ie6.min.css" rel="stylesheet">
         <![endif]-->
@@ -69,5 +70,6 @@
 		{% block content %}{% endblock %}
     </section>
 	</div>
+    <div class="loader"></div>
 	</body>
 </html>
