--- a/blueprints/site/templates/site/division.html
+++ b/blueprints/site/templates/site/division.html
@@ -1,6 +1,7 @@
 {% extends "site/base.html" %}
 
 {% block content %}
+<div class="alert alert-info"><h4>Выберите подразделение, специализацию и врача из списка ниже</h4></div>
 <blockquote>
     <dl class="dl-horizontal">
         <dt>Лечебное учреждение:</dt><dd>{{ lpu.name }}</dd>
@@ -13,6 +14,7 @@
 <div class="row-fluid">
 <div class="span3">
     <ul class="firstTable nav nav-pills nav-stacked">
+        <li class="nav-header">Выбор подразделения</li>
         {% for division in lpu.buildings %}
             <li><a id="{{ division.id }}" href="{{ url_for('.get_specialities', lpu_id=lpu_id, department_id=division.id) }}" class="division">{{ division.name }}{% if division.address %}<br>({{ division.address }}){% endif %}</a></li>
         {% endfor %}
@@ -26,5 +28,5 @@
 </div>
 </div>
 </div>
-<a href="{{ url_for('.division') }}" class="btn btn-primary btn-large">Вернуться</a>
+<a href="{{ url_for('.division', lpu_id=lpu_id) }}" class="btn btn-primary btn-large">Вернуться</a>
 {% endblock %}
