--- a/blueprints/site/templates/site/__documents_select.html
+++ b/blueprints/site/templates/site/__documents_select.html
@@ -13,89 +13,77 @@
         </div>
     </div>
 </div>
-
-<div class="{% if doc_meta_type != 'oms_dms' %}hidden{% endif %} doc_div policy_type_2 policy_type_3">
+{% set doc_type = form.document_type.data %}
+<div class="{% if doc_type not in ('policy_type_2', 'policy_type_3') %}hidden{% endif %} doc_div policy_type_2 policy_type_3">
     <div class="control-group">
         {{ form.series.label(class="control-label") }}
         <div class="controls">
-            {% if doc_meta_type == 'oms_dms' %}
-                {% set series=session.get('series') %}
-                {% set disabled='' %}
+            {% if doc_type in ('policy_type_2', 'policy_type_4') %}
+                {{ form.series(class="span1", value=session.get('series', ''), maxlength="10", size="2") }}
             {% else %}
-                {% set disabled='disabled' %}
+                {{ form.series(class="span1", value=session.get('series', ''), disabled=disabled, maxlength="10", size="2") }}
             {% endif %}
-            {{ form.series(class="span1", default=series, disabled=disabled, maxlength="10", size="2") }}
         </div>
     </div>
 
     <div class="control-group">
         {{ form.number.label(class="control-label") }}
         <div class="controls">
-            {% if doc_meta_type == 'oms_dms' %}
-                {% set number=session.get('number') %}
-                {% set disabled='' %}
+            {% if doc_type in ('policy_type_2', 'policy_type_4') %}
+                {{ form.number(class="span3", value=session.get('number', ''), placeholder="1234567890123456") }}
             {% else %}
-                {% set disabled='disabled' %}
+                {{ form.number(class="span3", value=session.get('number', ''), disabled=disabled, placeholder="1234567890123456") }}
             {% endif %}
-            {{ form.number(class="span3", default=number, disabled=disabled, placeholder="1234567890123456") }}
         </div>
     </div>
 </div>
 
-<div class="{% if doc_meta_type != 'new_oms' %}hidden{% endif %} doc_div policy_type_4">
+<div class="{% if doc_type != 'policy_type_4' %}hidden{% endif %} doc_div policy_type_4">
     <div class="control-group">
         {{ form.policy_number.label(class="control-label") }}
         <div class="controls">
-            {% if doc_meta_type == 'new_oms' %}
-                {% set number=session.get('number') %}
-                {% set disabled='' %}
-            {% else %}
-                {% set disabled='disabled' %}
-            {% endif %}
-            {{ form.policy_number(class="span3", default=number, disabled=disabled, placeholder="1234567890123456") }}
+        {% if doc_type == 'policy_type_4' %}
+            {{ form.policy_number(class="span3", value=session.get('number', ''), placeholder="1234567890123456") }}
+        {% else %}
+            {{ form.policy_number(class="span3", value=session.get('number', ''), disabled=disabled, placeholder="1234567890123456") }}
+        {% endif %}
         </div>
     </div>
 </div>
 
-<div class="{% if doc_meta_type != 'amb' %}hidden{% endif %} doc_div client_id">
+<div class="{% if doc_type != 'client_id' %}hidden{% endif %} doc_div client_id">
     <div class="control-group">
         {{ form.client_id.label(class="control-label") }}
         <div class="controls">
-            {% if doc_meta_type == 'amb' %}
-                {% set number=session.get('number') %}
-                {% set disabled='' %}
-            {% else %}
-                {% set disabled='disabled' %}
-            {% endif %}
-            {{ form.client_id(class="span3", default=number, disabled=disabled, placeholder="1234567890123456") }}
+        {% if doc_type == 'client_id' %}
+            {{ form.client_id(class="span3", value=session.get('number', ''), placeholder="1234567890123456") }}
+        {% else %}
+            {{ form.client_id(class="span3", value=session.get('number', ''), disabled=disabled, placeholder="1234567890123456") }}{% set disabled=True %}
+        {% endif %}
         </div>
     </div>
 </div>
 
-<div class="{% if doc_meta_type != 'doc' %}hidden{% endif %} doc_div doc_type_4 doc_type_7">
+<div class="{% if doc_type not in ('doc_type_4', 'doc_type_7') %}hidden{% endif %} doc_div doc_type_4 doc_type_7">
     <div class="control-group">
         {{ form.doc_series.label(class="control-label") }}
         <div class="controls">
-            {% if doc_meta_type == 'doc' %}
-                {% set series=session.get('series') %}
-                {% set disabled='' %}
-            {% else %}
-                {% set disabled='disabled' %}
-            {% endif %}
-            {{ form.doc_series(class="span1", default=series, disabled=disabled, maxlength="10", size="2") }}
+        {% if doc_type in ('doc_type_4', 'doc_type_7') %}
+            {{ form.doc_series(class="span1", value=session.get('series', ''), maxlength="10", size="2") }}
+        {% else %}
+            {{ form.doc_series(class="span1", value=session.get('series', ''), disabled=disabled, maxlength="10", size="2") }}
+        {% endif %}
         </div>
     </div>
 
     <div class="control-group">
         {{ form.doc_number.label(class="control-label") }}
         <div class="controls">
-            {% if doc_meta_type == 'doc' %}
-                {% set number=session.get('number') %}
-                {% set disabled='' %}
+            {% if doc_type in ('doc_type_4', 'doc_type_7') %}
+                {{ form.doc_number(class="span3", default=session.get('number', ''), placeholder="1234567890123456") }}
             {% else %}
-                {% set disabled='disabled' %}
+                {{ form.doc_number(class="span3", default=session.get('number', ''), disabled=disabled, placeholder="1234567890123456") }}
             {% endif %}
-            {{ form.doc_number(class="span3", default=number, disabled=disabled, placeholder="1234567890123456") }}
         </div>
     </div>
 </div>
