--- a/blueprints/site/templates/site/email/email.html
+++ b/blueprints/site/templates/site/email/email.html
@@ -10,29 +10,35 @@
 
     <body>
         <table>
-            <tr><th colspan="3">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ ticketUid }}</th></tr>
-            <tr><td>ФИО (Пациент):</td><td colspan="2">{{ patientName }}</td></tr>
-            <tr><td>Дата рождения:</td><td colspan="2">{{ birthday }} г.</td></tr>
-            {% if client_id %}
-            <tr><td>№ Амбулаторной карты:</td><td colspan="2">{{ client_id }}</td></tr>
+            <tr><th colspan="3">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ session.get('ticket_uid') }}</th></tr>
+            <tr><td>ФИО (Пациент):</td><td colspan="2">{{ data['lastname'] }} {{ data['firstname'] }} {{ data['patronymic'] }}</td></tr>
+            <tr><td>Дата рождения:</td><td colspan="2">{{ data['dd'] }}.{{ data['mm'] }}.{{ data['yy'] }} г.</td></tr>
+            {% if data.get('client_id') %}
+            <tr><td>№ Амбулаторной карты:</td><td colspan="2">{{ data.get('client_id') }}</td></tr>
             {% else %}
-            {% if policy_type == 2 or policy_type == 4 %}
-            <tr><td>Полис ОМС:</td><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
+            {% if data['document_type'] == 'policy_type_2' %}
+            <tr><td>Полис ОМС:</td><td colspan="2">{% if data['series'] %}{{ data['series'] }} {% endif %}{{ data['number'] }}</td></tr>
             {% endif %}
-            {% if policy_type == 3 %}
-            <tr><td>Полис ДМС:</td><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
+            {% if data['document_type'] == 'policy_type_4' %}
+            <tr><td>Полис ОМС:</td><td colspan="2">{{ data['policy_number'] }}</td></tr>
             {% endif %}
-            {% if document_code == 7 %}
-            <tr><td>Военный билет:</td><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
+            {% if data['document_type'] == 'policy_type_3' %}
+            <tr><td>Полис ДМС:</td><td colspan="2">{% if data['series'] %}{{ data['series'] }} {% endif %}{{ data['number'] }}</td></tr>
             {% endif %}
-            {% if document_code == 4 %}
-            <tr><td>Удостоверение личности офицера:</td><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
+            {% if data['document_type'] == 'doc_type_7' %}
+            <tr><td>Военный билет:</td><td colspan="2">{% if data['doc_series'] %}{{ data['doc_series'] }} {% endif %}{{ data['doc_number'] }}</td></tr>
+            {% endif %}
+            {% if data['document_type'] == 'doc_type_4' %}
+            <tr><td>Удостоверение личности офицера:</td><td colspan="2">{% if data['doc_series'] %}{{ data['doc_series'] }} {% endif %}{{ data['doc_number'] }}</td></tr>
             {% endif %}
             {% endif %}
             <tr><th colspan="3">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
-            <tr><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}, {{ address }}, телефон: {{ current_lpu_phone }}</td></tr>
-            <tr><td>Врач:</td><td colspan="2">{{ doctor }} ({{ speciality }})</td></tr>
-            <tr><td>Дата и время приёма:</td><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
+            <tr><td>Лечебное учреждение:</td><td colspan="2">{{ session.get('current_lpu_title') }}, {{ session.get('address') }}, телефон: {{ session.get('current_lpu_phone') }}</td></tr>
+            <tr><td>Врач:</td><td colspan="2">
+                {% set doctor=session.get('doctor') %}
+                {{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }} ({{ doctor.get('speciality') }})
+            </td></tr>
+            <tr><td>Дата и время приёма:</td><td colspan="2">{{ date|dateformat('dd.M.y') }} {{ start_time|datetimeformat('H:mm', rebase=False) }} - {{ finish_time|datetimeformat('H:mm', rebase=False) }}</td></tr>
             <tr><th colspan="3">ВНИМАНИЕ:</th></tr>
             <tr><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении.</td></tr>
             <tr><td colspan="3">С настоящим уведомлением необходимо обратиться в регистратуру лечебного учреждения не менее чем за 15 минут до указанного времени приёма.</td></tr>
